[package]
name = "wlug_framebrush_test"
version = "0.1.0"
edition = "2021"

[dependencies]
framebrush = { git = "https://github.com/serd223/framebrush.git", rev = "fe9364a2228ea8817c67a1ce1bbe5846ed4ddcee", version = "0.1.0" }
minifb = "0.28.0"
wlug = { git = "https://github.com/serd223/wlug", rev = "ba15e0c9c6311c620fac7504d6f9d298e03b4f48", version = "0.1.0" }
